--- a/resumes/jeffrey.hellrung.research.tex
+++ b/resumes/jeffrey.hellrung.research.tex
@@ -84,12 +84,13 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \begin{tabular}{@{}p{\CWa\columnwidth}@{}p{\CWb\columnwidth}@{}}
 {\small EXPERIENCE} &
 \begin{minipage}[t]{\CWb\columnwidth}
+\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2012. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x3); PIC 60.
+\vspace{\VSEX}
 \par \textbf{Park City Mathematics Institute}, Park City, UT; summer 2010. Teaching assistant for Professor Joseph Teran's week-long workshop on nonlinear elasticity.
+\vspace{\VSEX}
 \par \textbf{Walt Disney Animation Studios}, Burbank, CA; summer 2008. Created a Maya plugin front-end and developed the back-end algorithms to volumetrically fracture non-volumetric (i.e., quad surface) animation models.
 \vspace{\VSEX}
 \par \textbf{The Aerospace Corporation}, El Segundo, CA; summer 2005, 2006, 2007. Supported various programming projects relating to SOAP (Satellite Orbit Analysis Program) and SRE (Software Reliability Engineering). Created and modified existing code in C, C{\tt ++}, and Perl. Used Qt 4 to develop cross-platform graphical user interfaces in C{\tt ++}. Designed and prototyped several algorithms to solve satellite positioning problems.
-\vspace{\VSEX}
-\par \textbf{Teaching Fellow for Department of Mathematics}, UCLA, Los Angeles, CA; 2005 -- 2011. Led discussion sections to review lecture material, tutored at the Student Math Center, prepared review sessions before exams, and held office hours to provide students with additional help. %Classes include Math 32A, 32B, 33A, 33B, 132, 151A, 157, 269A (x3), 269B (x2); PIC 60.
 \vspace{\VSEX}
 \par \textbf{Clinic Project Manager serving Hewlett-Packard}, HMC, Claremont, CA; 2004 -- 2005. Headed a team of four to deliver to HP Labs several tools written in Matlab$^{\rm (R)}$ to analyze and correct printer drift, as well as mid-year and final reports detailing our approaches. Presented our findings at Harvey Mudd College and directly to Hewlett-Packard in Palo Alto, CA.
 \vspace{\VSEX}
@@ -115,7 +116,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \begin{minipage}[t]{\CWb\columnwidth}
 \everypar={\hangindent=\HI}
 \par Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)
-\par \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, 2011. (DOI:10.1016/j.jcp.2011.11.023)
+\par \textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016/j.jcp.2011.11.023)
 \par C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002/nme.3211)
 \par \textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145/1597990.1597997)
 \par E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)
@@ -139,7 +140,7 @@ Graduated with High Distinction, Honors in Mathematics %\\
 \par ACM (Association for Computing Machinery) Programming Contest - $7^{th}$ / 63 place (2004) and $20^{th}$ / 59 place (2003)
 %member of the MAA since 01/01/03; score of 10 on A.S.A. Actuarial Examination, Course 1, from the Society of Actuaries, 2003; National AP Scholar; Academic Olympiad at Utah State University, Mar 2001 - gold medal in Mathematics, bronze medal in Science; Utah State Math Contest, Mar 2000 - 4th place in state
 \par Stavros Busenberg Prize in Applied Mathematics (awarded by HMC) (2004)
-\par Coleman Prize in Mathematics (awarded by HMC) (2003)
+\par Courtney S. Coleman Prize in Mathematics (awarded by HMC) (2003)
 \par HMC Dean's List, 2002 -- 2004
 \end{minipage}
 \end{tabular}
