--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -4,7 +4,7 @@
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\title{Embedded Methods for Scientific Computing}
+\title{Embedded Methods in Scientific Computing}
 \author{Jeffrey Lee Hellrung, Jr.}
 \department{Mathematics}
 \degreeyear{2012}
@@ -19,10 +19,40 @@
 
 %\acknowledgments{}
 
-\vitaitem{1982}{Born, Glendale, Arizona, USA.}
-\vitaitem{2182}{Died, Mars}
+\vitaitem{2001, December}{[award] William Lowell Putnam Mathematical Competition - Top-500 Individual Placement}
+\vitaitem{2002, December}{[award] William Lowell Putnam Mathematical Competition - Top-200 Individual Placement}
+\vitaitem{2003, summer}{[research] Research Student for Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
+\vitaitem{2003, fall}{[award] Courtney S. Coleman Prize in Mathematics (awarded by HMC)}
+\vitaitem{2003, November}{[award] ACM (Association for Computing Machinery) Programming Contest - 20$^{th}$ (of 59) place}
+\vitaitem{2003, December}{[award] William Lowell Putnam Mathematical Competition - Top-200 Individual Placement}
+\vitaitem{2004, February}{[award] MCM (Mathematical Contest in Modeling) - Meritorious Winner}
+\vitaitem{2004, spring}{[award] Microsoft Imagine Cup Algorithm Invitational - 18$^{th}$ place internationally}
+\vitaitem{2004, spring}{[award] Stavros Busenberg Prize in Applied Mathematics (awarded by HMC)}
+\vitaitem{2004, summer}{[employment] Summer Intern at Auditude$^{\text{TM}}$, Inc. (Los Angeles, CA)}
+\vitaitem{2004 - 2005}{[research] Clinic Project Manager serving Hewlett-Packard Company (Palo Alto, CA) via Harvey Mudd College Mathematics Clinic}
+\vitaitem{2004, November}{[award] ACM (Association for Computing Machinery) Programming Contest - 7$^{th}$ (of 63) place}
+\vitaitem{2004, December}{[award] William Lowell Putnam Mathematical Competition - Top-500 Individual Placement, 11$^{th}$ Team Placement}
+\vitaitem{2005, May}{[award] Robert Borrelli Clinic Prize for Most Outstanding Clinic Team (awarded by HMC)}
+\vitaitem{2005, May}{[degree] Bachelor of Science in Mathematics (with High Distinction, Honors in Mathematics) from Harvey Mudd College (Claremont, CA)}
+\vitaitem{2005 - 2006}{[award] Chancellor's Prize (awarded by UCLA)}
+\vitaitem{2005 - 2009}{[award] VIGRE Fellowship (awarded by UCLA)}
+\vitaitem{2005 - 2012}{[employment] Teaching Fellow for the Department of Mathematics, UCLA (Los Angeles, CA)}
+\vitaitem{2005, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
+\vitaitem{2006, June}{[degree] Master of Arts in Mathematics from University of California Los Angeles (Los Angeles, CA)}
+\vitaitem{2006, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
+\vitaitem{2007, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
+\vitaitem{2008, summer}{[employment] Graduate Associate at Walt Disney Animation Studios (Burbank, CA)}
+\vitaitem{2010, summer}{[employment] Teaching Assistant at Park City Mathematics Institute (Park City, UT)}
+\vitaitem{2010, September}{[award] ICFP (International Conference in Functional Programming) Programming Contest - 80$^{th}$ (of 215+) place}
+\vitaitem{2011, May}{[award] Google Games Santa Monica - 3$^{rd}$ place}
+\vitaitem{2011, September}{[award] ICFP (International Conference in Functional Programming) Programming Contest - 95$^{th}$ (of 199) place}
 
-%\publication{}
+\publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415. (DOI:10.1109/RAMS.2006.1677409)}
+\publication{E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)}
+\publication{\textbf{J.~Hellrung}, A.~Selle, A.~Shek, E.~Sifakis, J.~Teran. ``Geometric fracture modeling in Bolt.'' SIGGRAPH 2009: Talks. (DOI:10.1145/1597990.1597997)}
+\publication{C.~Richardson, J.~Hegemann, E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran. ``An XFEM method for modeling geometrically elaborate crack propagation in brittle materials.'' International Journal for Numerical Methods in Engineering. Volume 88, Issue 10, pages 1042-1065, 9 December 2011. (DOI:10.1002/nme.3211)}
+\publication{\textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016/j.jcp.2011.11.023)}
+\publication{Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)}
 %\presentation{}
 
-\abstract{Embedded methods blah blah blah.}
+\abstract{[TODO]}
