--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -13,9 +13,14 @@
 
 \makeintropages
 
-\include{dissertation.intro}
-%\include{dissertation.chapter1}
-%\include{dissertation.chapter2}
+\include{chapters/introduction}
+\include{chapters/part1}
+\include{chapters/chapter1}
+\include{chapters/chapter2}
+\include{chapters/chapter3}
+\include{chapters/part2}
+\include{chapters/chapter4}
+\include{chapters/chapter5}
 
 \bibliography{bib/CIM,bib/DG,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/misc}
 \bibliographystyle{uclathes}
