--- a/dissertation/dissertation.prelim.tex
+++ b/dissertation/dissertation.prelim.tex
@@ -19,33 +19,17 @@
 
 %\acknowledgments{}
 
-\vitaitem{2001, December}{[award] William Lowell Putnam Mathematical Competition - Top-500 Individual Placement}
-\vitaitem{2002, December}{[award] William Lowell Putnam Mathematical Competition - Top-200 Individual Placement}
-\vitaitem{2003, summer}{[research] Research Student for Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
-\vitaitem{2003, fall}{[award] Courtney S. Coleman Prize in Mathematics (awarded by HMC)}
-\vitaitem{2003, November}{[award] ACM (Association for Computing Machinery) Programming Contest - 20$^{th}$ (of 59) place}
-\vitaitem{2003, December}{[award] William Lowell Putnam Mathematical Competition - Top-200 Individual Placement}
-\vitaitem{2004, February}{[award] MCM (Mathematical Contest in Modeling) - Meritorious Winner}
-\vitaitem{2004, spring}{[award] Microsoft Imagine Cup Algorithm Invitational - 18$^{th}$ place internationally}
-\vitaitem{2004, spring}{[award] Stavros Busenberg Prize in Applied Mathematics (awarded by HMC)}
-\vitaitem{2004, summer}{[employment] Summer Intern at Auditude$^{\text{TM}}$, Inc. (Los Angeles, CA)}
-\vitaitem{2004 - 2005}{[research] Clinic Project Manager serving Hewlett-Packard Company (Palo Alto, CA) via Harvey Mudd College Mathematics Clinic}
-\vitaitem{2004, November}{[award] ACM (Association for Computing Machinery) Programming Contest - 7$^{th}$ (of 63) place}
-\vitaitem{2004, December}{[award] William Lowell Putnam Mathematical Competition - Top-500 Individual Placement, 11$^{th}$ Team Placement}
-\vitaitem{2005, May}{[award] Robert Borrelli Clinic Prize for Most Outstanding Clinic Team (awarded by HMC)}
-\vitaitem{2005, May}{[degree] Bachelor of Science in Mathematics (with High Distinction, Honors in Mathematics) from Harvey Mudd College (Claremont, CA)}
-\vitaitem{2005 - 2006}{[award] Chancellor's Prize (awarded by UCLA)}
-\vitaitem{2005 - 2009}{[award] VIGRE Fellowship (awarded by UCLA)}
-\vitaitem{2005 - 2012}{[employment] Teaching Fellow for the Department of Mathematics, UCLA (Los Angeles, CA)}
-\vitaitem{2005, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
-\vitaitem{2006, June}{[degree] Master of Arts in Mathematics from University of California Los Angeles (Los Angeles, CA)}
-\vitaitem{2006, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
-\vitaitem{2007, summer}{[employment] Professional NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
-\vitaitem{2008, summer}{[employment] Graduate Associate at Walt Disney Animation Studios (Burbank, CA)}
-\vitaitem{2010, summer}{[employment] Teaching Assistant at Park City Mathematics Institute (Park City, UT)}
-\vitaitem{2010, September}{[award] ICFP (International Conference in Functional Programming) Programming Contest - 80$^{th}$ (of 215+) place}
-\vitaitem{2011, May}{[award] Google Games Santa Monica - 3$^{rd}$ place}
-\vitaitem{2011, September}{[award] ICFP (International Conference in Functional Programming) Programming Contest - 95$^{th}$ (of 199) place}
+\vitaitem{2003, summer}{Research Student for Associate Professor Jon T. Jacobsen of Harvey Mudd College (Claremont, CA)}
+\vitaitem{2004, summer}{Summer Intern at Auditude$^{\text{TM}}$, Inc. (Los Angeles, CA)}
+\vitaitem{2004 - 2005}{Clinic Project Manager serving Hewlett-Packard Company (Palo Alto, CA) via Harvey Mudd College Mathematics Clinic}
+\vitaitem{2005, May}{Received degree of Bachelor of Science in Mathematics (with High Distinction, Honors in Mathematics) from Harvey Mudd College}
+\vitaitem{2005 - 2012}{Teaching Fellow for the Department of Mathematics, University of California Los Angeles}
+\vitaitem{2005, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation (El Segundo, CA)}
+\vitaitem{2006, June}{Received degree of Master of Arts in Mathematics from University of California Los Angeles}
+\vitaitem{2006, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation}
+\vitaitem{2007, summer}{Prof. NE MTS Level 1 at The Aerospace Corporation}
+\vitaitem{2008, summer}{Graduate Associate at Walt Disney Animation Studios (Burbank, CA)}
+\vitaitem{2010, summer}{Teaching Assistant at Park City Mathematics Institute (Park City, UT)}
 
 \publication{M.~Hecht, D.~Buettner, \textbf{J.~Hellrung}. ``Risk assessment of real time digital control systems.'' Proceedings of the RAMS '06. Annual Reliability and Maintainability Symposium, 2006. Pages 409 - 415. (DOI:10.1109/RAMS.2006.1677409)}
 \publication{E.~Sifakis, \textbf{J.~Hellrung}, J.~Teran, A.~Oliker, and C.~Cutting. ``Local Flaps: A Real-Time Finite Element Based Solution to the Plastic Surgery Defect Puzzle.'' Studies in Health Technology and Informatics 2009; 142:313-8. (PMID:19377176)}
@@ -54,5 +38,17 @@
 \publication{\textbf{J.~Hellrung}, L.~Wang, E.~Sifakis, J.~Teran. ``A second-order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions.'' Journal of Computational Physics, Volume 231, Issue 4, p. 2015-2048, February 2012. (DOI:10.1016/j.jcp.2011.11.023)}
 \publication{Y.~Zhu, Y.~Wang, \textbf{J.~Hellrung}, A.~Cantarero, E.~Sifakis, J.~Teran. ``A second-order virtual node algorithm for nearly incompressible linear elasticity in irregular domains.'' 2011. (submitted)}
 %\presentation{}
+
+\award{William Lowell Putnam Mathematical Competition - Top-500 Individual Placement (2001, 2004); Top-200 Individual Placement (2002, 2003); 11$^{th}$ Team Placement (2004)}
+\award{Courtney S. Coleman Prize in Mathematics (awarded by HMC; 2003)}
+\award{ACM (Association for Computing Machinery) Programming Contest - 20$^{th}$ (of 59) place (2003); 7$^{th}$ (of 63) place (2004)}
+\award{MCM (Mathematical Contest in Modeling) - Meritorious Winner (2004)}
+\award{Microsoft Imagine Cup Algorithm Invitational - 18$^{th}$ place internationally (2004)}
+\award{Stavros Busenberg Prize in Applied Mathematics (awarded by HMC; 2004)}
+\award{Robert Borrelli Clinic Prize for Most Outstanding Clinic Team (awarded by HMC; 2005)}
+\award{Chancellor's Prize (awarded by UCLA; 2005 - 2006)}
+\award{VIGRE Fellowship (awarded by UCLA Department of Mathematics; 2005 - 2009)}
+\award{ICFP (International Conference in Functional Programming) Programming Contest - 80$^{th}$ (of 215+) place (2010); 95$^{th}$ (of 199) place (2011)}
+\award{Google Games Santa Monica - 3$^{rd}$ place (2011)}
 
 \abstract{[TODO]}
