expanding intro to part 2

--- a/dissertation/dissertation.macros.tex
+++ b/dissertation/dissertation.macros.tex
@@ -19,9 +19,11 @@
 
 \newcommand{\bbR}{\mathbb{R}}
 
+\newcommand{\bff}{\mathbf{f}}
 \newcommand{\bfn}{\mathbf{n}}
 \newcommand{\bfu}{\mathbf{u}}
 \newcommand{\bfx}{\mathbf{x}}
+\newcommand{\bfI}{\mathbf{I}}
 
 \newcommand{\bsepsilon}{\boldsymbol{\epsilon}}
 \newcommand{\bssigma}{\boldsymbol{\sigma}}
@@ -41,3 +43,5 @@
 \providecommand{\jump}[1]{\lrb{#1}}
 \providecommand{\norm}[1]{\lrV{#1}}
 \providecommand{\set}[1]{\lrB{#1}}
+
+\DeclareMathOperator{\tr}{tr}
