--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -19,10 +19,10 @@
 \include{chapters/chapter2}
 \include{chapters/chapter3}
 \include{chapters/part2}
-\include{chapters/chapter4}
-\include{chapters/chapter5}
+\include{chapters/chapter4/chapter4}
+\include{chapters/chapter5/chapter5}
 
-\bibliography{bib/CIM,bib/DG,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/misc}
+\bibliography{bib/CIM,bib/DG,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/SO,bib/misc}
 \bibliographystyle{uclathes}
 
 \end{document}
