--- a/dissertation/bib/FDM.bib
+++ b/dissertation/bib/FDM.bib
@@ -1,3 +1,30 @@
+%springerlink:10.1007/BF02919780
+%url = {http://dx.doi.org/10.1007/BF02919780},
+@article {Hyman52,
+   author = {Hyman, Morton},
+   affiliation = {Laboratorium voor Aeroen Hydrodynamica der Technische Hogeschool Delft},
+   title = {Non-iterative numerical solution of boundary-value problems},
+   journal = {Applied Scientific Research, Section B},
+   publisher = {Springer Netherlands},
+   issn = {0365-7140},
+   keyword = {Engineering},
+   pages = {325-351},
+   volume = {2},
+   issue = {1},
+   note = {10.1007/BF02919780},
+   year = {1952}
+}
+
+%Saul'ev_1963
+@article{Saul'ev63,
+ title={On solution of some boundary value problems on high performance computers by fictitious domain method},
+ volume={4},
+ journal={Dokl Akad Nauk SSSR 144 1962 497500 in Russian English translation in Soviet Math Dokl},
+ author={Saul'ev, V K},
+ year={1963},
+ pages={912--925}
+}
+
 %doi = {10.1016/0045-7825(94)90135-X},
 @article{Glowinski94,
  author = {Roland Glowinski and Tsorng-Whay Pan and Jacques Periaux},
