--- a/dissertation/bib/FEM_nonconforming.bib
+++ b/dissertation/bib/FEM_nonconforming.bib
@@ -193,3 +193,24 @@ doi=""
  pages = {1042--1065},
  numpages = {24},
 }
+
+%Hellrung:2012:SOV:2088552.2088809
+%url = {http://dx.doi.org/10.1016/j.jcp.2011.11.023},
+%doi = {10.1016/j.jcp.2011.11.023},
+%acmid = {2088809},
+@article{Hellrung12,
+ author = {Hellrung,Jr., Jeffrey Lee and Wang, Luming and Sifakis, Eftychios and Teran, Joseph M.},
+ title = {A second order virtual node method for elliptic problems with interfaces and irregular domains in three dimensions},
+ journal = {J. Comput. Phys.},
+ issue_date = {February, 2012},
+ volume = {231},
+ number = {4},
+ month = feb,
+ year = {2012},
+ issn = {0021-9991},
+ pages = {2015--2048},
+ numpages = {34},
+ publisher = {Academic Press Professional, Inc.},
+ address = {San Diego, CA, USA},
+ keywords = {Elliptic interface problems, Embedded interface methods, Multigrid methods, Variational methods, Virtual node methods},
+}
