--- a/dissertation/part1/part1.tex
+++ b/dissertation/part1/part1.tex
@@ -4,8 +4,6 @@
 % Copyright 2012, Jeffrey Hellrung.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-\part{Applications of Arbitrary Lagrangian Mesh Cutting}
-
-\section{Introduction}
+\part{Applications of Arbitrary Lagrangian Mesh Cutting} \label{pt:meshcutting}
 
 [TODO]
