--- a/dissertation/dissertation.tex
+++ b/dissertation/dissertation.tex
@@ -13,16 +13,16 @@
 
 \makeintropages
 
-\include{chapters/introduction}
-\include{chapters/part1}
-\include{chapters/chapter1}
-\include{chapters/chapter2}
-\include{chapters/chapter3}
-\include{chapters/part2}
-\include{chapters/chapter4/chapter4}
-\include{chapters/chapter5/chapter5}
+\include{introduction/introduction}
+\include{part1/part1}
+\include{part1/chapter1/chapter1}
+\include{part1/chapter2/chapter2}
+\include{part1/chapter3/chapter3}
+\include{part2/part2}
+\include{part2/chapter4/chapter4}
+\include{part2/chapter5/chapter5}
 
-\bibliography{bib/CIM,bib/DG,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/SO,bib/misc}
+\bibliography{bib/CIM,bib/DG,bib/embedded,bib/FDM,bib/FEM_adaptive,bib/FEM_conforming,bib/FEM_nonconforming,bib/FEM_LM,bib/FVM,bib/GFM,bib/IIM,bib/KKT,bib/LE,bib/MFEM,bib/MG,bib/MIB,bib/VNA,bib/XFEM,bib/petsc,bib/quadrature,bib/SO,bib/misc}
 \bibliographystyle{uclathes}
 
 \end{document}
